<resources>
    <string name="app_name">FortuneWheel</string>

    <string name="title_list">Set Items</string>
    <string name="title_changeItem">Change Item</string>
    <string name="title_save">Save</string>
    <string name="title_load">Load</string>

    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_share">Share</string>
    <string name="action_list">List</string>
    <string name="action_roll">Roll</string>
    <string name="action_add">Add</string>
    <string name="action_apply">Apply</string>
    <string name="action_reset">Reset</string>
    <string name="action_delete">Delete</string>

    <string name="text_isSelected">is Selected!!</string>
    <string name="text_save_hint">Input title...</string>
    <string name="text_empty_save">No item saved</string>
    <string name="default_notification_channel_id">fortunewheel</string>
</resources>